new configuration file for HLTStatistics

--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -8,7 +8,98 @@ triggerProcessorExecPath=/usr/local/bin/trigger-processor
 hearbeatTimeoutMillis=1010
 
 
-multiStatServices=DetectorData,MonitoringL0Data,MonitoringL1Data,L1TriggerData,L2TriggerData,L1OutputTriggerData,L1ReductionFactorTriggerData,UnfinishedEventsData,L0BuildingTimeVsEvtNumber,L1BuildingTimeVsEvtNumber,L1ProcessingTimeVsEvtNumber,L2ProcessingTimeVsEvtNumber
-singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped,L1InputEvents,L1PhysicsEvents,L1PhysicsByMultipleMasksEvents,L1RequestToCreams,L2InputEvents,L1ProcessingTimeMean,L2ProcessingTimeMean,L1ProcessingTimeMax,L2ProcessingTimeMax,L0BuildingTimeMean,L1BuildingTimeMean,L0BuildingTimeMax,L1BuildingTimeMax
+
+####multiStatServices explained
+####
+
+#DetectorData,                          Number of Events and data rate from all detectorsp [rolling]  [cumulative]
+#MonitoringL0Data,                      Missing sources id                                 [perBurst] [perBurst]
+#MonitoringL1Data,                      Missing sources id                                 [perBurst] [perBurst]
+#L1TriggerData,                         up to 256 l1 trigger word                          [rolling]  [cumulative]
+#L2TriggerData,                         up to 256 l2 trigger word                          [rolling]  [cumulative]
+#UnfinishedEventsData                   unused?                                            [rolling]
+
+#L0BuildingTimeVsEvtNumber,             Graph shown on the run control                     [rolling]  [perBurst]
+#L1BuildingTimeVsEvtNumber,
+#L1ProcessingTimeVsEvtNumber,
+#L2ProcessingTimeVsEvtNumber
+
+##Managed with HLT statistics
+#L1InputEventsPerMask                   Physics input event per mask                       [rolling]  [perBurst]
+#L1AcceptedEventsPerMask                                                                   [rolling]  [perBurst]
+#L2InputEventsPerMask                                                                      [rolling]  [perBurst]
+#L2AcceptedEventsPerMask                                                                   [rolling]  [perBurst]
+#L1InputEventsPerMaskPerBurst                                                              [perBurst] [perBurst]
+#L1AcceptedEventsPerMaskPerBurst                                                           [perBurst] [perBurst]
+#L2InputEventsPerMaskPerBurst                                                              [perBurst] [perBurst]
+#L2AcceptedEventsPerMaskPerBurst                                                           [perBurst] [perBurst]
+
+####SinglelongServices explained
+####
+#BytesToMerger,                                                                            [rolling]  [cumulative]
+#EventsToMerger,                                                                           [rolling]  [cumulative]
+#L1MRPsSent,                             Number of Mrp                                     [rolling]  [cumulative]
+#L1TriggersSent,                         Number of triggers sent in Mrp                    [rolling]  [cumulative]
+#PF_PacksReceived,                       Network handler statistics                        [rolling]  [cumulative]
+#PF_BytesReceived,                       Network handler statistics                        [rolling]  [cumulative]
+#PF_PacksDropped,                        Network handler statistics                        [rolling]  [cumulative]
+
+
+##Managed with HLT
+#L1InputEvents,                                                                            [rolling]  [perBurst]
+#L1ControlEvents,                                                                          [rolling]  [perBurst]
+#L1PeriodicsEvents,                                                                        [rolling]  [perBurst]
+#L1PhysicsEvents,                                                                          [rolling]  [perBurst]
+#L1PhysicsByMultipleMasksEvents,                                                           [rolling]  [perBurst]
+#L1RequestToCreams,                                                                        [rolling]  [perBurst]
+#L1AcceptedEvents,                                                                         [rolling]  [perBurst]
+#L1TimeoutEvents,                                                                          [rolling]  [perBurst]
+#L1AllDisabledEvents,                                                                      [rolling]  [perBurst]
+#L1BypassEvents,                                                                           [rolling]  [perBurst]
+#L1FlagAlgoEvents,                                                                         [rolling]  [perBurst]
+#L1AutoPassEvents,                                                                         [rolling]  [perBurst]
+#L1OutputEvents,                                                                           [rolling]  [perBurst]
+#L2InputEvents,                                                                            [rolling]  [perBurst]
+#L2SpecialEvents,                                                                          [rolling]  [perBurst]
+#L2ControlEvents,                                                                          [rolling]  [perBurst]
+#L2PeriodicsEvents,                                                                        [rolling]  [perBurst]
+#L2PhysicsEvents,                                                                          [rolling]  [perBurst]
+#L2PhysicsEventsByMultipleMasks,                                                           [rolling]  [perBurst]
+
+
+#L1InputEventsPerBurst,                                                                    [perBurst] [perBurst]
+#L1ControlEventsPerBurst,                                                                  [perBurst] [perBurst]
+#L1PeriodicsEventsPerBurst,                                                                [perBurst] [perBurst]
+#L1PhysicsEventsPerBurst,                                                                  [perBurst] [perBurst]
+#L1PhysicsByMultipleMasksEventsPerBurst,                                                   [perBurst] [perBurst]
+#L1RequestToCreamsPerBurst,                                                                [perBurst] [perBurst]
+#L1AcceptedEventsPerBurst,                                                                 [perBurst] [perBurst]
+#L1TimeoutEventsPerBurst,                                                                  [perBurst] [perBurst]
+#L1AllDisabledEventsPerBurst,                                                              [perBurst] [perBurst]
+#L1BypassEventsPerBurst,                                                                   [perBurst] [perBurst]
+#L1FlagAlgoEventsPerBurst,                                                                 [perBurst] [perBurst]
+#L1AutoPassEventsPerBurst,                                                                 [perBurst] [perBurst]
+#L1OutputEventsPerBurst,                                                                   [perBurst] [perBurst]
+#L2InputEventsPerBurst,                                                                    [perBurst] [perBurst]
+#L2SpecialEventsPerBurst,                                                                  [perBurst] [perBurst]
+#L2ControlEventsPerBurst,                                                                  [perBurst] [perBurst]
+#L2PeriodicsEventsPerBurst,                                                                [perBurst] [perBurst]
+#L2PhysicsEventsPerBurst,                                                                  [perBurst] [perBurst]
+#L2PhysicsEventsByMultipleMasksPerBurst,                                                   [perBurst] [perBurst]
+
+#L1ProcessingTimeMean,                                                                     [rolling]  [perBurst]
+#L2ProcessingTimeMean,                                                                     [rolling]  [perBurst]
+#L1ProcessingTimeMax,                                                                      [rolling]  [perBurst]
+#L2ProcessingTimeMax,                                                                      [rolling]  [perBurst]
+#L0BuildingTimeMean,                                                                       [rolling]  [perBurst]
+#L1BuildingTimeMean,                                                                       [rolling]  [perBurst]
+#L0BuildingTimeMax,                                                                        [rolling]  [perBurst]
+#L1BuildingTimeMax                                                                         [rolling]  [perBurst]
+
+
+multiStatServices=DetectorData,MonitoringL0Data,MonitoringL1Data,L1TriggerData,L2TriggerData,UnfinishedEventsData,L0BuildingTimeVsEvtNumber,L1BuildingTimeVsEvtNumber,L1ProcessingTimeVsEvtNumber,L2ProcessingTimeVsEvtNumberL1InputEventsPerMask,L1AcceptedEventsPerMask,L2InputEventsPerMask,L2AcceptedEventsPerMask,L1InputEventsPerMaskPerBurst,L1AcceptedEventsPerMaskPerBurst,L2InputEventsPerMaskPerBurst,L2AcceptedEventsPerMaskPerBurst
+
+singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped,L1InputEvents,L1ControlEvents,L1PeriodicsEvents,L1PhysicsEvents,L1PhysicsByMultipleMasksEvents,L1RequestToCreams,L1AcceptedEvents,L1TimeoutEvents,L1AllDisabledEvents,L1BypassEvents,L1FlagAlgoEvents,L1AutoPassEvents,L1OutputEvents,L2InputEvents,L2SpecialEvents,L2ControlEvents,L2PeriodicsEvents,L2PhysicsEvents,L2PhysicsEventsByMultipleMasks,L1InputEventsPerBurst,L1ControlEventsPerBurst,L1PeriodicsEventsPerBurst,L1PhysicsEventsPerBurst,L1PhysicsByMultipleMasksEventsPerBurst,L1RequestToCreamsPerBurst,L1AcceptedEventsPerBurst,L1TimeoutEventsPerBurst,L1AllDisabledEventsPerBurst,L1BypassEventsPerBurst,L1FlagAlgoEventsPerBurst,L1AutoPassEventsPerBurst,L1OutputEventsPerBurst,L2InputEventsPerBurst,L2SpecialEventsPerBurst,L2ControlEventsPerBurst,L2PeriodicsEventsPerBurst,L2PhysicsEventsPerBurst,L2PhysicsEventsByMultipleMasksPerBurst,L1ProcessingTimeMean,L2ProcessingTimeMean,L1ProcessingTimeMax,L2ProcessingTimeMax,L0BuildingTimeMean,L1BuildingTimeMean,L0BuildingTimeMax,L1BuildingTimeMax
 
 isMerger=false
+
