Add new EOB packet

--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -98,7 +98,7 @@ hearbeatTimeoutMillis=1010
 
 
 multiStatServices=DetectorData,MonitoringL0Data,MonitoringL1Data,L1TriggerData,L2TriggerData,UnfinishedEventsData,L0BuildingTimeVsEvtNumber,L1BuildingTimeVsEvtNumber,L1ProcessingTimeVsEvtNumber,L2ProcessingTimeVsEvtNumberL1InputEventsPerMask,L1AcceptedEventsPerMask,L2InputEventsPerMask,L2AcceptedEventsPerMask,L1InputEventsPerMaskPerBurst,L1AcceptedEventsPerMaskPerBurst,L2InputEventsPerMaskPerBurst,L2AcceptedEventsPerMaskPerBurst
-
+eobStatServices=EOBStats
 singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped,L1InputEvents,L1ControlEvents,L1PeriodicsEvents,L1PhysicsEvents,L1PhysicsByMultipleMasksEvents,L1RequestToCreams,L1AcceptedEvents,L1TimeoutEvents,L1AllDisabledEvents,L1BypassEvents,L1FlagAlgoEvents,L1AutoPassEvents,L1OutputEvents,L2InputEvents,L2SpecialEvents,L2ControlEvents,L2PeriodicsEvents,L2PhysicsEvents,L2PhysicsEventsByMultipleMasks,L1InputEventsPerBurst,L1ControlEventsPerBurst,L1PeriodicsEventsPerBurst,L1PhysicsEventsPerBurst,L1PhysicsByMultipleMasksEventsPerBurst,L1RequestToCreamsPerBurst,L1AcceptedEventsPerBurst,L1TimeoutEventsPerBurst,L1AllDisabledEventsPerBurst,L1BypassEventsPerBurst,L1FlagAlgoEventsPerBurst,L1AutoPassEventsPerBurst,L1OutputEventsPerBurst,L2InputEventsPerBurst,L2SpecialEventsPerBurst,L2ControlEventsPerBurst,L2PeriodicsEventsPerBurst,L2PhysicsEventsPerBurst,L2PhysicsEventsByMultipleMasksPerBurst,L1ProcessingTimeMean,L2ProcessingTimeMean,L1ProcessingTimeMax,L2ProcessingTimeMax,L0BuildingTimeMean,L1BuildingTimeMean,L0BuildingTimeMax,L1BuildingTimeMax
 
 isMerger=false
