Add L1 and L2 EOB packets

--- a/na62-farm-dim.conf
+++ b/na62-farm-dim.conf
@@ -36,8 +36,6 @@ hearbeatTimeoutMillis=1010
 
 ####SinglelongServices explained
 ####
-#BytesToMerger,                                                                            [rolling]  [cumulative]
-#EventsToMerger,                                                                           [rolling]  [cumulative]
 #L1MRPsSent,                             Number of Mrp                                     [rolling]  [cumulative]
 #L1TriggersSent,                         Number of triggers sent in Mrp                    [rolling]  [cumulative]
 #PF_PacksReceived,                       Network handler statistics                        [rolling]  [cumulative]
@@ -47,10 +45,11 @@ hearbeatTimeoutMillis=1010
 
 ##Managed with HLT
 #L1InputEvents,                                                                            [rolling]  [perBurst]
+#L1SpecialEvents,                                                                          [rolling]  [perBurst]
 #L1ControlEvents,                                                                          [rolling]  [perBurst]
 #L1PeriodicsEvents,                                                                        [rolling]  [perBurst]
 #L1PhysicsEvents,                                                                          [rolling]  [perBurst]
-#L1PhysicsByMultipleMasksEvents,                                                           [rolling]  [perBurst]
+#L1PhysicsEventsByMultipleMasks,                                                           [rolling]  [perBurst]
 #L1RequestToCreams,                                                                        [rolling]  [perBurst]
 #L1AcceptedEvents,                                                                         [rolling]  [perBurst]
 #L1TimeoutEvents,                                                                          [rolling]  [perBurst]
@@ -65,13 +64,21 @@ hearbeatTimeoutMillis=1010
 #L2PeriodicsEvents,                                                                        [rolling]  [perBurst]
 #L2PhysicsEvents,                                                                          [rolling]  [perBurst]
 #L2PhysicsEventsByMultipleMasks,                                                           [rolling]  [perBurst]
-
+#L2TimeoutEvents,                                                                          [rolling]  [perBurst]
+#L2AllDisabledEvents,                                                                      [rolling]  [perBurst]
+#L2BypassEvents,                                                                           [rolling]  [perBurst]
+#L2FlagAlgoEvents,                                                                         [rolling]  [perBurst]
+#L2AutoPassEvents,                                                                         [rolling]  [perBurst]
+#L2OutputEvents,                                                                           [rolling]  [perBurst]
+#BytesToMerger,                                                                            [rolling]  [perBurst]
+#EventsToMerger,                                                                           [rolling]  [perBurst]
 
 #L1InputEventsPerBurst,                                                                    [perBurst] [perBurst]
+#L1SpecialEventsPerBurst,                                                                  [perBurst] [perBurst]
 #L1ControlEventsPerBurst,                                                                  [perBurst] [perBurst]
 #L1PeriodicsEventsPerBurst,                                                                [perBurst] [perBurst]
 #L1PhysicsEventsPerBurst,                                                                  [perBurst] [perBurst]
-#L1PhysicsByMultipleMasksEventsPerBurst,                                                   [perBurst] [perBurst]
+#L1PhysicsEventsByMultipleMasksPerBurst,                                                   [perBurst] [perBurst]
 #L1RequestToCreamsPerBurst,                                                                [perBurst] [perBurst]
 #L1AcceptedEventsPerBurst,                                                                 [perBurst] [perBurst]
 #L1TimeoutEventsPerBurst,                                                                  [perBurst] [perBurst]
@@ -86,6 +93,14 @@ hearbeatTimeoutMillis=1010
 #L2PeriodicsEventsPerBurst,                                                                [perBurst] [perBurst]
 #L2PhysicsEventsPerBurst,                                                                  [perBurst] [perBurst]
 #L2PhysicsEventsByMultipleMasksPerBurst,                                                   [perBurst] [perBurst]
+#L2TimeoutEventsPerBurst,                                                                  [perBurst]  [perBurst]
+#L2AllDisabledEventsPerBurst,                                                              [perBurst]  [perBurst]
+#L2BypassEventsPerBurst,                                                                   [perBurst]  [perBurst]
+#L2FlagAlgoEventsPerBurst,                                                                 [perBurst]  [perBurst]
+#L2AutoPassEventsPerBurst,                                                                 [perBurst]  [perBurst]
+#L2OutputEventsPerBurst,                                                                   [perBurst]  [perBurst]
+#BytesToMergerPerBurst,                                                                    [perBurst]  [perBurst]
+#EventsToMergerPerBurst,                                                                   [perBurst]  [perBurst]
 
 #L1ProcessingTimeMean,                                                                     [rolling]  [perBurst]
 #L2ProcessingTimeMean,                                                                     [rolling]  [perBurst]
@@ -99,7 +114,18 @@ hearbeatTimeoutMillis=1010
 
 multiStatServices=DetectorData,MonitoringL0Data,MonitoringL1Data,L1TriggerData,L2TriggerData,UnfinishedEventsData,L0BuildingTimeVsEvtNumber,L1BuildingTimeVsEvtNumber,L1ProcessingTimeVsEvtNumber,L2ProcessingTimeVsEvtNumberL1InputEventsPerMask,L1AcceptedEventsPerMask,L2InputEventsPerMask,L2AcceptedEventsPerMask,L1InputEventsPerMaskPerBurst,L1AcceptedEventsPerMaskPerBurst,L2InputEventsPerMaskPerBurst,L2AcceptedEventsPerMaskPerBurst
 eobStatServices=EOBStats
-singlelongServices=BytesToMerger,EventsToMerger,L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped,L1InputEvents,L1ControlEvents,L1PeriodicsEvents,L1PhysicsEvents,L1PhysicsByMultipleMasksEvents,L1RequestToCreams,L1AcceptedEvents,L1TimeoutEvents,L1AllDisabledEvents,L1BypassEvents,L1FlagAlgoEvents,L1AutoPassEvents,L1OutputEvents,L2InputEvents,L2SpecialEvents,L2ControlEvents,L2PeriodicsEvents,L2PhysicsEvents,L2PhysicsEventsByMultipleMasks,L1InputEventsPerBurst,L1ControlEventsPerBurst,L1PeriodicsEventsPerBurst,L1PhysicsEventsPerBurst,L1PhysicsByMultipleMasksEventsPerBurst,L1RequestToCreamsPerBurst,L1AcceptedEventsPerBurst,L1TimeoutEventsPerBurst,L1AllDisabledEventsPerBurst,L1BypassEventsPerBurst,L1FlagAlgoEventsPerBurst,L1AutoPassEventsPerBurst,L1OutputEventsPerBurst,L2InputEventsPerBurst,L2SpecialEventsPerBurst,L2ControlEventsPerBurst,L2PeriodicsEventsPerBurst,L2PhysicsEventsPerBurst,L2PhysicsEventsByMultipleMasksPerBurst,L1ProcessingTimeMean,L2ProcessingTimeMean,L1ProcessingTimeMax,L2ProcessingTimeMax,L0BuildingTimeMean,L1BuildingTimeMean,L0BuildingTimeMax,L1BuildingTimeMax
+
+singlelongServices=L1MRPsSent,L1TriggersSent,PF_PacksReceived,PF_BytesReceived,PF_PacksDropped,L1InputEvents,L1SpecialEvents,L1ControlEvents,L1PeriodicsEvents,L1PhysicsEvents,L1PhysicsEventsByMultipleMasks,L1RequestToCreams,L1AcceptedEvents,L1TimeoutEvents,L1AllDisabledEvents,L1BypassEvents,L1FlagAlgoEvents,L1AutoPassEvents,L1OutputEvents,L2InputEvents,L2SpecialEvents,L2ControlEvents,L2PeriodicsEvents,L2PhysicsEvents,L2PhysicsEventsByMultipleMasks,L2TimeoutEvents,L2AllDisabledEvents,L2BypassEvents,L2FlagAlgoEvents,L2AutoPassEvents,L2OutputEvents,BytesToMerger,EventsToMerger,L1InputEventsPerBurst,L1SpecialEventsPerBurst,L1ControlEventsPerBurst,L1PeriodicsEventsPerBurst,L1PhysicsEventsPerBurst,L1PhysicsEventsByMultipleMasksPerBurst,L1RequestToCreamsPerBurst,L1AcceptedEventsPerBurst,L1TimeoutEventsPerBurst,L1AllDisabledEventsPerBurst,L1BypassEventsPerBurst,L1FlagAlgoEventsPerBurst,L1AutoPassEventsPerBurst,L1OutputEventsPerBurst,L2InputEventsPerBurst,L2SpecialEventsPerBurst,L2ControlEventsPerBurst,L2PeriodicsEventsPerBurst,L2PhysicsEventsPerBurst,L2PhysicsEventsByMultipleMasksPerBurst,L2TimeoutEventsPerBurst,L2AllDisabledEventsPerBurst,L2BypassEventsPerBurst,L2FlagAlgoEventsPerBurst,L2AutoPassEventsPerBurst,L2OutputEventsPerBurst,BytesToMergerPerBurst,EventsToMergerPerBurst,L1ProcessingTimeMean,L2ProcessingTimeMean,L1ProcessingTimeMax,L2ProcessingTimeMax,L0BuildingTimeMean,L1BuildingTimeMean,L0BuildingTimeMax,L1BuildingTimeMax
 
 isMerger=false
+isSharedMemory=true
+
+
+
+
+
+
+
+
+
 
